--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://0.0.0.0:27017/Bookmanagement
+MONGODB_URI=mongodb+srv://aidpriyanshu:x3bpFtyYHu9EC5Dk@cluster0.oi8zbmg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=8000
 COOKIE_EXPIRE=7
 JWT_SECRET=iamnotahuman
